force-app/main/default/objects/Quality_Control__c/fields/Extra_material_in_attic_designated_area__c.field-meta.xml
<CustomField>
    <fullName>Extra_material_in_attic_designated_area__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Extra material in attic/designated area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>