force-app/main/default/objects/Quality_Control__c/fields/Extra_material_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extra_material_Notes__c</fullName>
    <label>Extra material Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>