force-app/main/default/objects/Quality_Control__c/fields/Eye_protection_hard_hat_Notes__c.field-meta.xml
<CustomField>
    <fullName>Eye_protection_hard_hat_Notes__c</fullName>
    <label>Eye protection &amp; hard hat Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>