force-app/main/default/objects/Quality_Control__c/fields/Face_hearth_Notes__c.field-meta.xml
<CustomField>
    <fullName>Face_hearth_Notes__c</fullName>
    <label>Face &amp; hearth Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>