force-app/main/default/objects/Quality_Control__c/fields/Field_Service_Manager__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Manager__c</fullName>
    <formula>Work_Order__r.Field_Service_Manager__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Manager</label>
    <type>Text</type>
</CustomField>