force-app/main/default/objects/Quality_Control__c/fields/Field_Service_Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Manager_ID__c</fullName>
    <formula>House_Unit__r.Field_Service_Manager_ID_formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Service Manager ID</label>
    <type>Text</type>
</CustomField>