force-app/main/default/objects/Quality_Control__c/fields/Floor_clean_free_of_glue__c.field-meta.xml
<CustomField>
    <fullName>Floor_clean_free_of_glue__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Floor clean &amp; free of glue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>