force-app/main/default/objects/Quality_Control__c/fields/Floor_plan_matches_actual_site__c.field-meta.xml
<CustomField>
    <fullName>Floor_plan_matches_actual_site__c</fullName>
    <inlineHelpText>Include all pertinent info #Baths, mud or not.</inlineHelpText>
    <label>Floor plan matches actual site?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Please select a value</fullName>
                <isActive>false</isActive>
                <label>Please select a value</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>