force-app/main/default/objects/Quality_Control__c/fields/Floor_Plan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_Notes__c</fullName>
    <label>Floor Plan Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>