force-app/main/default/objects/Quality_Control__c/fields/Floors_covered_Notes__c.field-meta.xml
<CustomField>
    <fullName>Floors_covered_Notes__c</fullName>
    <label>Floors covered Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>