force-app/main/default/objects/Quality_Control__c/fields/Gaps_at_stairs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Gaps_at_stairs_Notes__c</fullName>
    <label>Gaps at stairs Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>