force-app/main/default/objects/Quality_Control__c/fields/Garage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Garage_Notes__c</fullName>
    <label>Garage Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>