force-app/main/default/objects/Quality_Control__c/fields/Grout_all_tops_of_showers__c.field-meta.xml
<CustomField>
    <fullName>Grout_all_tops_of_showers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grout all tops of showers</label>
    <type>Checkbox</type>
</CustomField>