force-app/main/default/objects/Quality_Control__c/fields/Grout_filled_at_top_of_showers__c.field-meta.xml
<CustomField>
    <fullName>Grout_filled_at_top_of_showers__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Grout filled at top of showers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>