force-app/main/default/objects/Quality_Control__c/fields/Grout_joint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grout_joint_Notes__c</fullName>
    <label>Grout joint Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>