force-app/main/default/objects/Quality_Control__c/fields/Grout_top_of_showers_Notes__c.field-meta.xml
<CustomField>
    <fullName>Grout_top_of_showers_Notes__c</fullName>
    <label>Grout top of showers Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>