force-app/main/default/objects/Quality_Control__c/fields/Heat_temp_or_permanent_Notes__c.field-meta.xml
<CustomField>
    <fullName>Heat_temp_or_permanent_Notes__c</fullName>
    <label>Heat, temp or permanent Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>