force-app/main/default/objects/Quality_Control__c/fields/House_garage_perimeter_clean_of_trash__c.field-meta.xml
<CustomField>
    <fullName>House_garage_perimeter_clean_of_trash__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>House, garage &amp; perimeter clean of trash</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>