force-app/main/default/objects/Quality_Control__c/fields/House_garage_perimeter_Notes__c.field-meta.xml
<CustomField>
    <fullName>House_garage_perimeter_Notes__c</fullName>
    <label>House, garage &amp; perimeter Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>