force-app/main/default/objects/Quality_Control__c/fields/House_Paint_Notes__c.field-meta.xml
<CustomField>
    <fullName>House_Paint_Notes__c</fullName>
    <label>House Paint Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>