force-app/main/default/objects/Quality_Control__c/fields/House_Unit__c.field-meta.xml
<CustomField>
    <fullName>House_Unit__c</fullName>
    <label>House/Unit</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Quality Control</relationshipLabel>
    <relationshipName>Quality_Control</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>