force-app/main/default/objects/Quality_Control__c/fields/Industry_specs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Industry_specs_Notes__c</fullName>
    <label>Industry specs Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>