force-app/main/default/objects/Quality_Control__c/fields/Inspection_by_County_notes__c.field-meta.xml
<CustomField>
    <fullName>Inspection_by_County_notes__c</fullName>
    <label>Inspection by County Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>