force-app/main/default/objects/Quality_Control__c/fields/Installed_flat_with_industry_specs__c.field-meta.xml
<CustomField>
    <fullName>Installed_flat_with_industry_specs__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Is job installed to industry standards?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>