force-app/main/default/objects/Quality_Control__c/fields/Installed_per_diagram_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installed_per_diagram_Notes__c</fullName>
    <label>Installed per diagram Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>