force-app/main/default/objects/Quality_Control__c/fields/Installed_square_to_room__c.field-meta.xml
<CustomField>
    <fullName>Installed_square_to_room__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Installed square to room</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>