force-app/main/default/objects/Quality_Control__c/fields/Is_house_ready_for_tile__c.field-meta.xml
<CustomField>
    <fullName>Is_house_ready_for_tile__c</fullName>
    <defaultValue>&quot;None&quot;</defaultValue>
    <label>Is house ready for tile?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>