force-app/main/default/objects/Quality_Control__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <formula>NOT (
  ISPICKVAL(Status__c, &quot;Completed&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to determine if a QC is &quot;Open&quot;</inlineHelpText>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>