force-app/main/default/objects/Quality_Control__c/fields/Is_the_splash_caulked__c.field-meta.xml
<CustomField>
    <fullName>Is_the_splash_caulked__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Is the splash caulked?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>