force-app/main/default/objects/Quality_Control__c/fields/Is_Tub_Deck_Ready_for_Install__c.field-meta.xml
<CustomField>
    <fullName>Is_Tub_Deck_Ready_for_Install__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <inlineHelpText>Confirm there is a hole cut. Document any issues in Notes field.</inlineHelpText>
    <label>Is Tub Deck Ready for Install?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>