force-app/main/default/objects/Quality_Control__c/fields/Joint_spacing_between_boards_row_to_row__c.field-meta.xml
<CustomField>
    <fullName>Joint_spacing_between_boards_row_to_row__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>Joint spacing between boards row to row</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>