force-app/main/default/objects/Quality_Control__c/fields/Joint_spacing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Joint_spacing_Notes__c</fullName>
    <label>Joint spacing Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>