force-app/main/default/objects/Quality_Control__c/fields/Missing_grout_Notes__c.field-meta.xml
<CustomField>
    <fullName>Missing_grout_Notes__c</fullName>
    <label>Missing grout Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>