force-app/main/default/objects/Quality_Control__c/fields/Most_recent_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_Case_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most recent Case Created</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quality Control</relationshipLabel>
    <relationshipName>Quality_Control</relationshipName>
    <type>Lookup</type>
</CustomField>