force-app/main/default/objects/Quality_Control__c/fields/Mud_Bottom_Shower_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mud_Bottom_Shower_Notes__c</fullName>
    <label>Mud Bottom Shower Notes</label>
    <type>TextArea</type>
</CustomField>