force-app/main/default/objects/Quality_Control__c/fields/Neat_clean_niches_drain_in_pan_Notes__c.field-meta.xml
<CustomField>
    <fullName>Neat_clean_niches_drain_in_pan_Notes__c</fullName>
    <label>Neat &amp; clean niches &amp; drain in pan Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>