force-app/main/default/objects/Quality_Control__c/fields/No_damage_to_tubs_pans__c.field-meta.xml
<CustomField>
    <fullName>No_damage_to_tubs_pans__c</fullName>
    <defaultValue>&quot;Please select a value&quot;</defaultValue>
    <label>No damage to tubs &amp; pans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>