force-app/main/default/objects/Quality_Control__c/fields/On_Time_or_Early__c.field-meta.xml
<CustomField>
    <fullName>On_Time_or_Early__c</fullName>
    <formula>Days_Past_Due__c  &lt;= 0</formula>
    <label>On Time or Early</label>
    <type>Checkbox</type>
</CustomField>