force-app/main/default/objects/Quality_Control__c/fields/Pan_square_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pan_square_Notes__c</fullName>
    <label>Pan square Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>