force-app/main/default/objects/Quality_Control__c/fields/Picture_Build_Measure__c.field-meta.xml
<CustomField>
    <fullName>Picture_Build_Measure__c</fullName>
    <label>Picture Build Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>