force-app/main/default/objects/Quality_Control__c/fields/Picture_Cabinets_Installed__c.field-meta.xml
<CustomField>
    <fullName>Picture_Cabinets_Installed__c</fullName>
    <label>Picture Cabinets Installed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>