force-app/main/default/objects/Quality_Control__c/fields/Picture_Countertops_Installed__c.field-meta.xml
<CustomField>
    <fullName>Picture_Countertops_Installed__c</fullName>
    <label>Picture Countertops Installed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>