force-app/main/default/objects/Quality_Control__c/fields/Picture_Extra_Material__c.field-meta.xml
<CustomField>
    <fullName>Picture_Extra_Material__c</fullName>
    <label>Picture Extra Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>