force-app/main/default/objects/Quality_Control__c/fields/Picture_Gap_Between_Tile_and_Tub__c.field-meta.xml
<CustomField>
    <fullName>Picture_Gap_Between_Tile_and_Tub__c</fullName>
    <label>Picture Gap Between Tile and Tub</label>
    <length>255</length>
    <type>Text</type>
</CustomField>