force-app/main/default/objects/Quality_Control__c/fields/Picture_Garage_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Picture_Garage_Cleaned__c</fullName>
    <label>Picture Garage Cleaned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>