force-app/main/default/objects/Quality_Control__c/fields/Picture_House_and_Perimeter_Clean__c.field-meta.xml
<CustomField>
    <fullName>Picture_House_and_Perimeter_Clean__c</fullName>
    <label>Picture House and Perimeter Clean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>