force-app/main/default/objects/Quality_Control__c/fields/Picture_House_Painted__c.field-meta.xml
<CustomField>
    <fullName>Picture_House_Painted__c</fullName>
    <label>Picture House Painted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>