force-app/main/default/objects/Quality_Control__c/fields/Picture_Pan_Square__c.field-meta.xml
<CustomField>
    <fullName>Picture_Pan_Square__c</fullName>
    <label>Picture Pan Square</label>
    <length>255</length>
    <type>Text</type>
</CustomField>