force-app/main/default/objects/Quality_Control__c/fields/Picture_Proper_Spacing_Baseboard_FirePl__c.field-meta.xml
<CustomField>
    <fullName>Picture_Proper_Spacing_Baseboard_FirePl__c</fullName>
    <label>Picture Proper Spacing Baseboard/FirePl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>