force-app/main/default/objects/Quality_Control__c/fields/Picture_Shower_Bath_Field_Measure__c.field-meta.xml
<CustomField>
    <fullName>Picture_Shower_Bath_Field_Measure__c</fullName>
    <label>Picture Shower/Bath Field Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>