force-app/main/default/objects/Quality_Control__c/fields/Picture_Slab_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Picture_Slab_Tolerance__c</fullName>
    <label>Picture Slab Tolerance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>