force-app/main/default/objects/Quality_Control__c/fields/Picture_Trim_Baseboard_Installed__c.field-meta.xml
<CustomField>
    <fullName>Picture_Trim_Baseboard_Installed__c</fullName>
    <label>Picture Trim Baseboard Installed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>