force-app/main/default/objects/Quality_Control__c/fields/Picture_Tub_Condition__c.field-meta.xml
<CustomField>
    <fullName>Picture_Tub_Condition__c</fullName>
    <label>Picture Tub Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>