force-app/main/default/objects/Quality_Control__c/fields/Picture_Tub_Deck_Ready_For_Install__c.field-meta.xml
<CustomField>
    <fullName>Picture_Tub_Deck_Ready_For_Install__c</fullName>
    <label>Picture Tub Deck Ready For Install</label>
    <length>255</length>
    <type>Text</type>
</CustomField>