force-app/main/default/objects/Quality_Control__c/fields/Picture_Wall_Plumb__c.field-meta.xml
<CustomField>
    <fullName>Picture_Wall_Plumb__c</fullName>
    <label>Picture Wall Plumb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>